# spring-boot-bruteforce-ssh

./: README.md  pom.xml
src/main/java/com/uqac/bruteforce_ssh/: BruteforceSshApplication.java  SshUtil.java  wordList_ssh_hydra.txt
src/main/java/com/uqac/bruteforce_ssh/controller/: CppExecutionController.java  SshController.java
src/main/java/com/uqac/bruteforce_ssh/cppSSHAttack/: sshConnection.cpp  sshConnexion  wordList_ssh_hydra.txt
src/main/java/com/uqac/bruteforce_ssh/dto/: ApiProperties.java  ScanResult.java  ServiceRequest.java
src/main/java/com/uqac/bruteforce_ssh/services/: CppExecutionService.java
src/main/resources/: application.properties
src/main/resources/cppSSHAttack/: CMakeLists.txt  sshConnection.cpp  sshConnexion
src/test/java/com/uqac/bruteforce_ssh/: BruteforceSshApplicationTests.java
